--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="Récupère facilement tes Memories Snapchat dans ta galerie. Outil gratuit, traitement 100% local et sécurisé.">
 
-    <script src="https://quge5.com/88/tag.min.js" data-zone="190828" async data-cfasync="false"></script>
+    <script>(function (s) { s.dataset.zone = '10289831', s.src = 'https://gizokraijaw.net/vignette.min.js' })([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
     <!-- =============================================
          LIBRAIRIES CDN
          ============================================= -->
