--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         content="Récupère facilement tes Memories Snapchat dans ta galerie. Outil gratuit, traitement 100% local et sécurisé.">
 
     <script src="https://quge5.com/88/tag.min.js" data-zone="190828" async data-cfasync="false"></script>
+    <script src="https://3nbf4.com/act/files/tag.min.js?z=10315055" data-cfasync="false" async></script>
     <!-- =============================================
          LIBRAIRIES CDN
          ============================================= -->
